@@ -1,3 +1,12 @@
+2004-01-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Merge-in clock/Makefile.am, console/Makefile.am,
+	startup/Makefile.am, timer/Makefile.am, wrapup/Makefile.am. Use automake
+	compilation rules.
+	* clock/Makefile.am, console/Makefile.am, startup/Makefile.am, 
+	timer/Makefile.am, wrapup/Makefile.am: Remove.
+	* configure.ac: Reflect changes above.
+
 2004-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Add PREINSTALL_DIRS.
